@startuml

left to right direction
title Domain model relationships

frame Resources.Countries {
    class Country {
        + Id : Guid
        + Name : String
    }
}

frame Resources.Customers {
    class CreditCard {
        + Id : Guid
        + NameOnCard : String
        + CardNumber : String
        + Active : Boolean
        + Created : DateTime
        + Expiry : DateTime
        + Customer : Customer
    }
    class Customer {
        + Id : Guid
        + FirstName : String
        + LastName : String
        + Email : String
        + Password : String
        + Balance : Decimal
        + CountryId : Guid
    }
}

frame Resources.Carts {
    class Cart {
        + Id : Guid
        + Products : ReadOnlyCollection`1
        + CustomerId : Guid
        + TotalCost : Decimal
        + TotalTax : Decimal
    }
    class CartProduct {
        + CartId : Guid
        + CustomerId : Guid
        + Quantity : Int32
        + ProductId : Guid
        + Created : DateTime
        + Cost : Decimal
        + Tax : Decimal
    }
}

frame Resources.Products {
    class Product {
        + Id : Guid
        + Name : String
        + Created : DateTime
        + Modified : DateTime
        + Active : Boolean
        + Quantity : Int32
        + Cost : Decimal
        + Code : ProductCode
        + Returns : ReadOnlyCollection`1
    }
    class ProductCode {
        + Id : Guid
        + Name : String
    }
    class Return {
        + Product : Product
        + CustomerId : Guid
        + Reason : ReturnReason
        + Created : DateTime
        + Note : String
    }
}

frame Resources.Purchases {
    class Purchase {
        + Id : Guid
        + Products : ReadOnlyCollection`1
        + Created : DateTime
        + CustomerId : Guid
        + TotalTax : Decimal
        + TotalCost : Decimal
    }
    class PurchasedProduct {
        + PurchaseId : Guid
        + ProductId : Guid
        + Quantity : Int32
    }
}



Resources.Customers.CreditCard "Customer" ...> "Id" Resources.Customers.Customer
Resources.Customers.Customer "CountryId" ...> "Id" Resources.Countries.Country
Resources.Customers.Customer "CountryId" ...> "Id" SecondSystem.Resources.Countries.Country
Resources.Carts.Cart "CustomerId" ...> "Id" Resources.Customers.Customer
Resources.Carts.CartProduct "CartId" ...> "Id" Resources.Carts.Cart
Resources.Carts.CartProduct "CustomerId" ...> "Id" Resources.Customers.Customer
Resources.Carts.CartProduct "ProductId" ...> "Id" Resources.Products.Product
Resources.Products.Product "Code" ...> "Id" Resources.Products.ProductCode
Resources.Products.Return "Product" ...> "Id" Resources.Products.Product
Resources.Products.Return "CustomerId" ...> "Id" Resources.Customers.Customer
Resources.Purchases.Purchase "CustomerId" ...> "Id" Resources.Customers.Customer
Resources.Purchases.PurchasedProduct "PurchaseId" ...> "Id" Resources.Purchases.Purchase
Resources.Purchases.PurchasedProduct "ProductId" ...> "Id" Resources.Products.Product

@enduml
